feat: Switch from HttpsURLConnection to HttpRequest
During testing the CRUD workflow of the partslist service, the HttpsURLConnection
was lacking the HTTP PATCH call. Replace the calls with JDK 11 HttpRequest